--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">MylifeCompany</string>
-    <string name="fb_app_id">276313173033941</string>
-    <string name="ak_client_token">46a9f1dfa1dd879c752894bca133214f</string>
+    <string name="app_name">Mylife Company</string>
+    <string name="fb_app_id">290156418492392</string>
+    <string name="fb_login_protocol_scheme">fb290156418492392</string>
+    <string name="ak_client_token">c152449b54fe9afeb6fd72acb1d72c2c</string>
 </resources>
